[package]
name = "ripemd160"
version = "0.1.0"
edition = "2021"

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuels = "0.42.0"
tokio = { version = "1.12", features = ["rt", "macros"] }